src/test/deca/codegen/invalid/result/test_acces_non_init_output_no_check.res
  ** IMA ** ERREUR ** Ligne 45 : 
    Adressage indirect : la base ne contient pas une adresse
